# maximilian-discovery

./: .gitignore  README.md  digest.md  discovery.py  evaluate_embeddings.py  feeds.py  profile.py  pyproject.toml  requirements.txt  seen_links.json
.github/workflows/: discovery.yml  tests.yml
analysis/: scoring_evaluation.ipynb
tests/: __init__.py  test_dedup.py  test_digest.py  test_embeddings.py  test_feeds.py  test_scoring.py
